--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="blog"><button id="btn-blog" class="btn bg-custom-col-green w-28">Blog</button></div>
                 <div class="flex gap-2 items-center">
                     <div><img src="assets/logo.png" alt=""></div>
-                    <h2>Donate Bangladesh</h2>
+                    <h2 class="text-xl font-semibold">Donate Bangladesh</h2>
                 </div>
                 <div class="flex gap-2 items-center">
                     <div><img src="assets/coin.png" alt=""></div>
