changing some styles

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
     <style>
         #transaction-history h6 {
-            background-color: rgb(218, 213, 213);
+            background-color: rgb(246, 243, 243);
             border-radius: 5px;
-            padding: 16px;
+            padding: 5px 5px 0px 10px;
         }
         #transaction-history > div {
             border: 1px solid gray;
             padding: 15px;
+            border-radius: 10px;
             margin-bottom: 10px;
         }
-        
     </style>
 
     <!-- Custom Script for changing color and others  -->
@@ -52,7 +52,7 @@
                 </div>
                 <div class="flex gap-2 items-center">
                     <div><img src="assets/coin.png" alt=""></div>
-                    <h2 id="total-amount-left" class="total-amount-left">5500</h2><span>BDT</span>
+                    <h2 id="total-amount-left" class="total-amount-left font-semibold text-lg">5500</h2><span>BDT</span>
                 </div>
             </div>
         </nav>
@@ -76,10 +76,10 @@
                     <div class="w-4/6 mx-auto">
                         <div class="flex items-center text-sm gap-1 bg-gray-100 w-28 justify-center rounded-lg py-2">
                             <div><img src="assets/coin.png" alt=""></div>
-                            <h2 id="account-balance-noakhali">0</h2><span>BDT</span>
+                            <h2 id="account-balance-noakhali" class="font-semibold text-lg">0</h2><span>BDT</span>
                         </div>
                         <h2 id="donate-for-n" class="text-2xl font-bold my-4">Donate for Flood at Noakhali, Bangladesh</h2>
-                        <p> The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
+                        <p class="text-justify"> The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
                             donation will help provide essential supplies and to those affected by this disaster. Every
                             contribution, big or small, makes difference. Please join us in supporting the relief
                             efforts and making a positive impact on the lives of those in need.</p>
@@ -96,7 +96,7 @@
                             <div class="modal-box text-center">
                                 <h3 class="text-3xl font-bold">Congrats!</h3>
                                 <img class="mt-4 w-8 mx-auto" src="assets/coin.png" alt="">
-                                <p class="py-4">You have donated for humankind</p>
+                                <p class="py-4">You have donated for humankind/Flood at Noakhali</p>
                                 <h3 class="font-semibold">Sucessfully</h3>
                                 <div class="modal-action w-4/12 mx-auto">
                                     <form method="dialog">
@@ -115,10 +115,10 @@
                     <div class="w-4/6 mx-auto">
                         <div class="flex items-center text-sm gap-1 bg-gray-100 w-28 justify-center rounded-lg py-2">
                             <div><img src="assets/coin.png" alt=""></div>
-                            <h2 id="account-balance-feni">600</h2><span>BDT</span>
+                            <h2 id="account-balance-feni" class="font-semibold text-lg">600</h2><span>BDT</span>
                         </div>
-                        <h2 id="donate-for-f" class="text-2xl font-bold my-4">Donate for Flood Relief in Feni,Bangladesh</h2>
-                        <p>The recent floods in Feni have devastated local communities, leading to severe disruption and
+                        <h2 id="donate-for-f" class="text-2xl font-bold my-4">Donate for Flood Relief in Feni, Bangladesh</h2>
+                        <p class="text-justify">The recent floods in Feni have devastated local communities, leading to severe disruption and
                             loss. Your generous donation will help provide immediate aid, including food, clean water,
                             and medical supplies, to those affected by this calamity. Together, we can offer crucial
                             support and help rebuild lives in the aftermath of this disaster. Every contribution counts
@@ -137,7 +137,7 @@
                             <div class="modal-box text-center">
                                 <h3 class="text-3xl font-bold">Congrats!</h3>
                                 <img class="mt-4 w-8 mx-auto" src="assets/coin.png" alt="">
-                                <p class="py-4">You have donated for humankind</p>
+                                <p class="py-4">You have donated for humankind/Feni Crisis</p>
                                 <h3 class="font-semibold">Sucessfully</h3>
                                 <div class="modal-action w-4/12 mx-auto">
                                     <form method="dialog">
@@ -157,10 +157,10 @@
                     <div class="w-4/6 mx-auto">
                         <div class="flex items-center text-sm gap-1 bg-gray-100 w-28 justify-center rounded-lg py-2">
                             <div><img src="assets/coin.png" alt=""></div>
-                            <h2 id="account-balance-quota">2400</h2><span>BDT</span>
+                            <h2 id="account-balance-quota" class="font-semibold text-lg">2400</h2><span>BDT</span>
                         </div>
                         <h2 id="donate-for-q" class="text-2xl font-bold my-4">Aid for Injured in the Quota Movement</h2>
-                        <p> The recent Quota movement has resulted in numerous injuries and significant hardship for
+                        <p class="text-justify"> The recent Quota movement has resulted in numerous injuries and significant hardship for
                             many individuals. Your support is crucial in providing medical assistance, rehabilitation,
                             and necessary supplies to those affected. By contributing, you help ensure that injured
                             individuals receive the care and support they need during this challenging time. Every
@@ -180,7 +180,7 @@
                             <div class="modal-box text-center">
                                 <h3 class="text-3xl font-bold">Congrats!</h3>
                                 <img class="mt-4 w-8 mx-auto" src="assets/coin.png" alt="">
-                                <p class="py-4">You have donated for humankind</p>
+                                <p class="py-4">You have donated for humankind/Quota Movement</p>
                                 <h3 class="font-semibold">Sucessfully</h3>
                                 <div class="modal-action w-4/12 mx-auto">
                                     <form method="dialog">
