--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@
         }
     </script>
 
-
 </head>
 
 <body>
     <header class="bg-yellow-50 pt-4 pb-2 sticky top-0">
-        <nav class="container w-9/12 mx-auto mb-6">
-            <div id="nav-bar" class="nav-bar flex justify-between">
-                <div class="blog"><button id="btn-blog" class="btn bg-custom-col-green w-28">Blog</button></div>
-                <div class="flex gap-2 items-center">
+        <nav class="lg:container w-full lg:w-9/12 mx-auto mb-6">
+            <div id="nav-bar" class="nav-bar flex gap-8 lg:gap-0 justify-between">
+                <div class="blog"><button id="btn-blog" class="btn bg-custom-col-green w-16 lg:w-28 lg:ml-0 ml-4">Blog</button></div>
+                <div class="flex gap-2 items-center lg:ml-0 ml-8">
                     <div><img src="assets/logo.png" alt=""></div>
-                    <h2 class="text-xl font-semibold">Donate Bangladesh</h2>
+                    <h2 class="text-sm lg:text-xl font-semibold">Donate Bangladesh</h2>
                 </div>
                 <div class="flex gap-2 items-center">
                     <div><img src="assets/coin.png" alt=""></div>
@@ -60,20 +59,20 @@
 
     <main>
         <!-- Navigator  -->
-        <div id="btn-navigation" class="buttons flex items-center justify-center py-8 gap-2 my-16 sticky top-[96px] backdrop-blur-3xl">
+        <div id="btn-navigation" class="buttons flex items-center justify-center py-8 gap-2 lg:my-16 my-2 sticky top-[96px] backdrop-blur-3xl">
             <!-- btn History  -->
             <button id="btn-donation" class="btn w-28">Donation</button>
             <button id="btn-history" class="btn w-28">History</button>
         </div>
 
         <!-- Donation Section  -->
-        <section id="donate-section" class="donate-section container w-9/12 mx-auto mb-6">
+        <section id="donate-section" class="donate-section lg:container w-full lg:w-9/12 mx-auto mb-6">
             <div>
                 <!-- Donation for Noakhali  -->
                 <div
-                    class="donate donate-noakhali flex gap-8 justify-center border border-red-100 p-4 rounded-2xl mb-8">
-                    <div class="donate-img w-[50%]"><img src="assets/noakhali.png" class="max-h-96" alt=""></div>
-                    <div class="w-4/6 mx-auto">
+                    class="donate donate-noakhali flex flex-col lg:flex-row gap-8 justify-center border border-red-100 p-4 rounded-2xl mb-8">
+                    <div class="donate-img lg:w-[50%]"><img src="assets/noakhali.png" class="max-h-96" alt=""></div>
+                    <div class="lg:w-4/6 mx-auto">
                         <div class="flex items-center text-sm gap-1 bg-gray-100 w-28 justify-center rounded-lg py-2">
                             <div><img src="assets/coin.png" alt=""></div>
                             <h2 id="account-balance-noakhali" class="font-semibold text-lg">0</h2><span>BDT</span>
@@ -110,9 +109,9 @@
                 </div>
 
                 <!-- Donate for Feni  -->
-                <div class="donate donate-feni flex gap-8 justify-center border border-red-100 p-4 rounded-2xl mb-8">
-                    <div class="donate-img w-[50%]"><img src="assets/feni.png" class="max-h-96" alt=""></div>
-                    <div class="w-4/6 mx-auto">
+                <div class="donate donate-feni flex flex-col lg:flex-row gap-8 justify-center border border-red-100 p-4 rounded-2xl mb-8">
+                    <div class="donate-img lg:w-[50%]"><img src="assets/feni.png" class="max-h-96" alt=""></div>
+                    <div class="lg:w-4/6 mx-auto">
                         <div class="flex items-center text-sm gap-1 bg-gray-100 w-28 justify-center rounded-lg py-2">
                             <div><img src="assets/coin.png" alt=""></div>
                             <h2 id="account-balance-feni" class="font-semibold text-lg">600</h2><span>BDT</span>
@@ -151,10 +150,10 @@
                 </div>
 
                 <!-- Donation for Injured people of Quota Movement  -->
-                <div class="donate donate-quota flex gap-8 justify-center border border-red-100 p-4 rounded-2xl mb-8">
-                    <div class="donate-img w-[50%]"><img src="assets/quota-protest.png" class="max-h-[500px]" alt="">
+                <div class="donate donate-quota flex flex-col lg:flex-row gap-8 justify-center border border-red-100 p-4 rounded-2xl mb-8">
+                    <div class="donate-img lg:w-[50%]"><img src="assets/quota-protest.png" class="max-h-[500px]" alt="">
                     </div>
-                    <div class="w-4/6 mx-auto">
+                    <div class="lg:w-4/6 mx-auto">
                         <div class="flex items-center text-sm gap-1 bg-gray-100 w-28 justify-center rounded-lg py-2">
                             <div><img src="assets/coin.png" alt=""></div>
                             <h2 id="account-balance-quota" class="font-semibold text-lg">2400</h2><span>BDT</span>
