--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
     <header class="bg-yellow-50 pt-4 pb-2 sticky top-0">
         <nav class="lg:container w-full lg:w-9/12 mx-auto mb-6">
             <div id="nav-bar" class="nav-bar flex gap-8 lg:gap-0 justify-between">
-                <div class="blog"><button id="btn-blog" class="btn bg-custom-col-green w-16 lg:w-28 lg:ml-0 ml-4">Blog</button></div>
+                <div class="home"><button id="btn-home" class="btn bg-custom-col-green w-16 lg:w-28 lg:ml-0 ml-4">Home</button></div>
                 <div class="flex gap-2 items-center lg:ml-0 ml-8">
                     <div><img src="assets/logo.png" alt=""></div>
                     <h2 class="text-sm lg:text-xl font-semibold">Donate Bangladesh</h2>
