working on input box related issues

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                             <div class="modal-box text-center">
                                 <h3 class="text-3xl font-bold">Congrats!</h3>
                                 <img class="mt-4 w-8 mx-auto" src="assets/coin.png" alt="">
-                                <p class="py-4">You have donated for humankind/Flood at Noakhali</p>
+                                <p class="py-4">You have donated for humankind</p>
                                 <h3 class="font-semibold">Sucessfully</h3>
-                                <div class="modal-action w-4/12 mx-auto">
+                                <div class="modal-action w-[50%] lg:w-4/12 mx-auto">
                                     <form method="dialog">
                                         <!-- if there is a button in form, it will close the modal -->
                                         <button class="btn text-center">Close confirmation</button>
@@ -136,9 +136,9 @@
                             <div class="modal-box text-center">
                                 <h3 class="text-3xl font-bold">Congrats!</h3>
                                 <img class="mt-4 w-8 mx-auto" src="assets/coin.png" alt="">
-                                <p class="py-4">You have donated for humankind/Feni Crisis</p>
+                                <p class="py-4">You have donated for humankind</p>
                                 <h3 class="font-semibold">Sucessfully</h3>
-                                <div class="modal-action w-4/12 mx-auto">
+                                <div class="modal-action w-[50%] lg:w-4/12 mx-auto">
                                     <form method="dialog">
                                         <!-- if there is a button in form, it will close the modal -->
                                         <button class="btn text-center">Close confirmation</button>
@@ -179,9 +179,9 @@
                             <div class="modal-box text-center">
                                 <h3 class="text-3xl font-bold">Congrats!</h3>
                                 <img class="mt-4 w-8 mx-auto" src="assets/coin.png" alt="">
-                                <p class="py-4">You have donated for humankind/Quota Movement</p>
+                                <p class="py-4">You have donated for humankind</p>
                                 <h3 class="font-semibold">Sucessfully</h3>
-                                <div class="modal-action w-4/12 mx-auto">
+                                <div class="modal-action w-[50%] lg:w-4/12 mx-auto">
                                     <form method="dialog">
                                         <!-- if there is a button in form, it will close the modal -->
                                         <button class="btn text-center">Close confirmation</button>
@@ -195,7 +195,7 @@
         </section>
 
         <!-- History Section  -->
-        <section id="history-section" class="history-section hidden container w-9/12 mx-auto mb-6">
+        <section id="history-section" class="history-section hidden lg:container lg:w-9/12 w-11/12 mx-auto mb-6">
             <div id="transaction-history" class="flex flex-col gap-4 p-6 mb-2">
             </div>
         </section>
