deleting some extra text from blog.html

--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
             <div class="collapse-content">
                 <h3 class="text-lg font-extrabold">In event Propagation, there are three phases:</h3>
                 <p class="text-justify">
-                    1. Capturing 2. Target 3. Bubbling. <br>.,mnb vc 
+                    1. Capturing 2. Target 3. Bubbling. <br> 
                     In the capturing phase, the event work from top to bottom. Root node to target node. This is called Capturing phase.
                     When event handle at the target node that is called Target phase  
                     and 
