--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
+        .nav-bg {
+            background-color: rgba(249, 219, 151, 0.4);
+        }
         #transaction-history h6 {
             background-color: rgb(246, 243, 243);
             border-radius: 5px;
+            margin-top: 4px;
             padding: 5px 5px 0px 10px;
         }
         #transaction-history > div {
@@ -41,30 +45,31 @@
 </head>
 
 <body>
-    <header class="bg-yellow-50 pt-4 pb-2 sticky top-0">
-        <nav class="lg:container w-full lg:w-9/12 mx-auto mb-6">
-            <div id="nav-bar" class="nav-bar flex gap-8 lg:gap-0 justify-between">
-                <div class="blog"><button id="btn-blog" class="btn bg-custom-col-green w-16 lg:w-28 lg:ml-0 ml-4">Blog</button></div>
-                <div class="flex gap-2 items-center lg:ml-0 ml-8">
-                    <div><img src="assets/logo.png" alt=""></div>
-                    <h2 class="text-sm lg:text-xl font-semibold">Donate Bangladesh</h2>
+    <header class="sticky top-0 backdrop-blur-3xl">
+        <nav class="nav-bg pt-4 pb-8">
+            <section class="lg:container w-full lg:w-9/12 mx-auto">
+                <div id="nav-bar" class="nav-bar flex gap-8 lg:gap-0 justify-between">
+                    <div class="blog"><button id="btn-blog" class="btn bg-custom-col-green w-16 lg:w-28 lg:ml-0 ml-4">Blog</button></div>
+                    <div class="flex gap-2 items-center lg:ml-0 ml-8">
+                        <div><img src="assets/logo.png" alt=""></div>
+                        <h2 class="text-sm lg:text-xl font-semibold">Donate Bangladesh</h2>
+                    </div>
+                    <div class="flex gap-2 items-center">
+                        <div><img src="assets/coin.png" alt=""></div>
+                        <h2 id="total-amount-left" class="total-amount-left font-semibold text-lg">5500</h2><span>BDT</span>
+                    </div>
                 </div>
-                <div class="flex gap-2 items-center">
-                    <div><img src="assets/coin.png" alt=""></div>
-                    <h2 id="total-amount-left" class="total-amount-left font-semibold text-lg">5500</h2><span>BDT</span>
-                </div>
-            </div>
+            </section>
         </nav>
-    </header>
-
-    <main>
         <!-- Navigator  -->
-        <div id="btn-navigation" class="buttons flex items-center justify-center py-8 gap-2 lg:my-16 my-2 sticky top-[96px] backdrop-blur-3xl">
+        <div id="btn-navigation" class="buttons flex items-center justify-center lg:py-8 py-6 gap-2 lg:mb-8">
             <!-- btn History  -->
             <button id="btn-donation" class="btn w-28">Donation</button>
             <button id="btn-history" class="btn w-28">History</button>
         </div>
+    </header>
 
+    <main>
         <!-- Donation Section  -->
         <section id="donate-section" class="donate-section lg:container w-full lg:w-9/12 mx-auto mb-6">
             <div>
@@ -195,13 +200,13 @@
         </section>
 
         <!-- History Section  -->
-        <section id="history-section" class="history-section hidden lg:container lg:w-9/12 w-11/12 mx-auto mb-6">
-            <div id="transaction-history" class="flex flex-col gap-4 p-6 mb-2">
+        <section id="history-section" class="history-section hidden lg:container lg:w-9/12 w-full mx-auto mb-6">
+            <div id="transaction-history" class="flex flex-col gap-4 p-6 mb-2 lg:text-xl text-sm">
             </div>
         </section>
-
     </main>
 
+    <!-- Footer Section  -->
     <footer id="footer-bg" class="bg-yellow-50 h-28 mt-16">
         
     </footer>
