--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <div class="modal-action w-[50%] lg:w-4/12 mx-auto">
                                     <form method="dialog">
                                         <!-- if there is a button in form, it will close the modal -->
-                                        <button class="btn text-center">Close confirmation</button>
+                                        <button class="btn text-sm">Close confirmation</button>
                                     </form>
                                 </div>
                             </div>
@@ -146,7 +146,7 @@
                                 <div class="modal-action w-[50%] lg:w-4/12 mx-auto">
                                     <form method="dialog">
                                         <!-- if there is a button in form, it will close the modal -->
-                                        <button class="btn text-center">Close confirmation</button>
+                                        <button class="btn text-center text-sm">Close confirmation</button>
                                     </form>
                                 </div>
                             </div>
@@ -189,7 +189,7 @@
                                 <div class="modal-action w-[50%] lg:w-4/12 mx-auto">
                                     <form method="dialog">
                                         <!-- if there is a button in form, it will close the modal -->
-                                        <button class="btn text-center">Close confirmation</button>
+                                        <button class="btn text-center text-sm">Close confirmation</button>
                                     </form>
                                 </div>
                             </div>
