--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
         <nav class="nav-bg pt-4 pb-8">
             <section class="lg:container w-full lg:w-9/12 mx-auto">
                 <div id="nav-bar" class="nav-bar flex gap-8 lg:gap-0 justify-between">
-                    <div class="blog"><button id="btn-blog" class="btn bg-custom-col-green w-16 lg:w-28 lg:ml-0 ml-4">Blog</button></div>
+                    <div class="home"><button id="btn-home" class="btn bg-custom-col-green w-16 lg:w-28 lg:ml-0 ml-4">Home</button></div>
                     <div class="flex gap-2 items-center lg:ml-0 ml-8">
                         <div><img src="assets/logo.png" alt=""></div>
                         <h2 class="text-sm lg:text-xl font-semibold">Donate Bangladesh</h2>
