final commit 12:38 PM

--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
     <main class="lg:container lg:w-9/12 mx-2 mx-auto flex flex-col mt-6">
         <h1 class="text-5xl mb-6 text-center">Important FAQ</h1>
         <div class="collapse collapse-arrow border rounded-none">
-            <input type="radio" name="my-accordion-4" checked="checked" />
+            <input type="radio" name="my-accordion-4" />
             <div class="collapse-title text-xl font-medium">What is Document Object Model (DOM)</div>
             <div class="collapse-content">
                 <p>DOM or Document Object Model is a model of HTML. DOM makes object of html elements so that Javascript can easily interact with html elements.</p>
