final commit 12:43 PM

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 
     <style>
         .nav-bg {
-            background-color: rgba(249, 219, 151, 0.4);
+            background-color: rgb(249, 219, 151);
         }
     </style>
 
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <header class="sticky top-0 backdrop-blur-3xl">
+    <header class="backdrop-blur-3xl">
         <nav class="nav-bg pt-4 pb-8">
             <section class="lg:container w-full lg:w-9/12 mx-auto">
                 <div id="nav-bar" class="nav-bar flex gap-8 lg:gap-0 justify-between">
